ai/kgateway-mcp/mcp-server-resources.yaml
# step 4 - https://kgateway.dev/docs/mcp/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-gateway
  namespace: mcp
spec:
  selector:
    matchLabels:
      app: mcp-gateway
  template:
    metadata:
      labels:
        app: mcp-gateway
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: mcp-gateway
        image: ghcr.io/mcp-proxy/mcp-proxy:0.0.3
        args:
          - --file=/config/config.json
        resources:
          requests:
            cpu: 200m
            memory: 500Mi
          limits:
            memory: 800Mi
        volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: mcp-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-gateway
  namespace: mcp
spec:
  selector:
    app: mcp-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
