ai/kgateway-mcp/httproute-xlistener.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-route
  namespace: mcp
spec:
  parentRefs:
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: mcp-listener-set
    namespace: mcp
    sectionName: mcp
  rules:
  - backendRefs:
    - name: mcp-everything-service
      port: 3000
